Updated animation to only table
Changed animation to reflect just the table and not the whole background

--- a/homework2.css
+++ b/homework2.css
@@ -1,14 +1,6 @@
 body {
    background: #ffff00;
-   color: #000000;
-  animation: mymove 8s forwards;
 }
-@keyframes mymove {
-    from {background-color: #ffff00;}
-    to {background-color: #e6e6fa;}
-    from {color: #000000;}
-    to {color: #008000;}
-  }
 a, .cherry {
     color:red;
 }
@@ -36,9 +28,17 @@ h3{
 }
 table {
    background-color: cyan; 
+   color: #000000;
+   animation: mymove 8s forwards;
    padding: 10px;
    border-spacing: 5px;
 }
+@keyframes mymove {
+    from {background-color: cyan;}
+    to {background-color: #e6e6fa;}
+    from {color: #000000;}
+    to {color: #008000;}
+  }
 td {
     text-align: center;
     vertical-align: middle;
