Updated first letter tags to correct footer
Paragraph tags for the first letters were red which blended into the footer background color. Create personalized id tags for some paragraph tags to fix it.

--- a/assig5.css
+++ b/assig5.css
@@ -37,7 +37,12 @@ img{
     margin-right: 20px;
     overflow: auto;
 }
-p::first-letter{
+#redletter1::first-letter{
+    font-weight: bold;
+    font-size: 250%;
+    color: #990000;
+}
+#redletter2::first-letter{
     font-weight: bold;
     font-size: 250%;
     color: #990000;
