--- a/contact.css
+++ b/contact.css
@@ -35,8 +35,8 @@
         text-align: center;
     }
     .profilepic {
-        width:150; 
-        height:150;
+        width:150px; 
+        height:150px;
     }
     a, li, ul  {
         text-decoration: none;
