--- a/homework1.css
+++ b/homework1.css
@@ -3,7 +3,7 @@ body {
     font-family:'PT Sans', sans-serif;
 }
 .favicon-logo {
-    margin-left: 500px;
+    margin: auto;
 }
 h1, footer{
     text-align: center;
